# phlex

./: CMakeLists.txt  codeql_investigation_report.md
.github/workflows/: clang-format-check.yaml  clang-format-fix.yaml  clang-tidy-check.yaml  clang-tidy-fix.yaml  cmake-build.yaml  cmake-format-check.yaml  cmake-format-fix.yaml  codeql-analysis.yaml  codeql-analysis.yml  coverage.yaml
Modules/private/: PhlexSymbolVisibility.cmake
docs/: Doxyfile
docs/source/: conf.py  index.rst
docs/source/api/: graph_proxy.rst
form/: CMakeLists.txt
form/form/: form.cpp  form.hpp
form/mock_phlex/: CMakeLists.txt  phlex_toy_config.cpp  phlex_toy_config.hpp  phlex_toy_core.cpp  phlex_toy_core.hpp
form/root_storage/: root_ttree_container.cpp
phlex/: CMakeLists.txt  module.hpp  source.hpp
phlex/core/: CMakeLists.txt  graph_proxy.hpp  registrar.hpp  registration_api.hpp
phlex/graph/: CMakeLists.txt  serial_node.hpp  serializer_node.hpp
phlex/model/: CMakeLists.txt  algorithm_name.hpp  level_hierarchy.hpp  product_store.hpp  qualified_name.hpp
phlex/utilities/: CMakeLists.txt  hashing.hpp  resource_usage.hpp  stripped_name.hpp
scripts/: coverage.sh  prepare-snapshot.sh  setup-env.sh
test/form/: CMakeLists.txt  reader.cpp  writer.cpp
test/plugins/: CMakeLists.txt
